--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+# bun
+bun.lockb
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
